--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
         <label for="text-password">Password:</label>
         <input type="password" id="text-password" name="password" placeholder="Password">
     </div>
+    <div>
+        <input type="submit">
+    </div>
 </form>
